# bt-mini

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_run.sh
client/include/: bencode.hpp  filepicker.hpp  logger.hpp  networking.hpp  peer_udp.hpp  torrent.hpp  tracker.hpp
client/src/: filepicker.cpp  logger.cpp  main.cpp  networking.cpp  peer_udp.cpp  torrent.cpp  tracker.cpp
server/src/: main.cpp  server.cpp  server.hpp
src/: main.cpp  server.cpp  server.hpp
